# NRF24L01-Pico-C-Library

./: CMakeLists.txt
Application/: CMakeLists.txt
Application/Inc/: main.h
Application/Src/: main.c
